--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">Halcyonic</a></h1>
+									<h1><a href="#" id="logo">Murat Olgun</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
+										<a href="index.html">Anasayfa</a>
 										<a href="threecolumn.html">Three Column</a>
 										<a href="twocolumn1.html">Two Column #1</a>
 										<a href="twocolumn2.html">Two Column #2</a>
@@ -44,7 +44,7 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-big">Go on, click me!</a>
+										<a href="#" class="button-big">Buradan devam edin!</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
