--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<h2>Who We Are</h2>
+												<h2>Kimdir?</h2>
 												<h3>A subheading about who we are</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
@@ -151,7 +151,7 @@
 									<!-- Box #2 -->
 										<section>
 											<header>
-												<h2>What We Do</h2>
+												<h2>Ne yapar?</h2>
 												<h3>A subheading about what we do</h3>
 											</header>
 											<ul class="check-list">
@@ -169,7 +169,7 @@
 									<!-- Box #3 -->
 										<section>
 											<header>
-												<h2>What People Are Saying</h2>
+												<h2>Ne derler?</h2>
 												<h3>And a final subheading about our clients</h3>
 											</header>
 											<ul class="quote-list">
@@ -265,7 +265,7 @@
 
 			<!-- Copyright -->
 				<div id="copyright">
-					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+					&copy; Murat Olgun. Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
 				</div>
 
 		</div>
