--- a/index.html
+++ b/index.html
@@ -152,10 +152,10 @@
 										<section>
 											<header>
 												<h2>Ne yapar?</h2>
-												<h3>A subheading about what we do</h3>
+												<h3>Doktora yapar, çalışır.</h3>
 											</header>
 											<ul class="check-list">
-												<li>Sed mattis quis rutrum accum</li>
+												<li>Marmara Üniversitesi'nde İstatistik Doktora programında tezini yazıyor'</li>
 												<li>Eu varius nibh suspendisse lorem</li>
 												<li>Magna eget odio amet mollis justo</li>
 												<li>Facilisis quis sagittis mauris</li>
@@ -169,19 +169,19 @@
 									<!-- Box #3 -->
 										<section>
 											<header>
-												<h2>Ne derler?</h2>
-												<h3>And a final subheading about our clients</h3>
+												<h2>Neler yaptı?</h2>
+												<h3>Okudu, çalıştı.</h3>
 											</header>
 											<ul class="quote-list">
 												<li>
 													<img src="images/pic06.jpg" alt="" />
-													<p>"Neque nisidapibus mattis"</p>
-													<span>Jane Doe, CEO of UntitledCorp</span>
+													<p>"Teos Bilgi Teknolojileri'ni kurdu"</p>
+													<span>Mayıs 2017, İzmir/span>
 												</li>
 												<li>
 													<img src="images/pic07.jpg" alt="" />
-													<p>"Lorem ipsum consequat!"</p>
-													<span>John Doe, President of FakeBiz</span>
+													<p>"Limantepe'ye ortak oldu, ayrıldı"</p>
+													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
 													<img src="images/pic08.jpg" alt="" />
