--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 												</li>
 												<li>
 													<img src="images/pic07.jpg" alt="" />
-													<p>"Limantepe'ye ortak oldu, ayrıldı"</p>
+													<p>"Limantepe Bilgi Teknolojileri'ne ortak oldu, ayrıldı"</p>
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
