--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
 										<section>
 											<header>
 												<h2>Neler yaptı?</h2>
-												<h3>Okudu, çalıştı.</h3>
+												<h3>Okudu, çalıştı, evlendi, baba oldu</h3>
 											</header>
 											<ul class="quote-list">
 												<li>
-													<img src="images/pic06.jpg" alt="" />
+													<img src="images/teoslogo.png" alt="" />
 													<p>"Teos Bilgi Teknolojileri'ni kurdu"</p>
 													<span>Mayıs 2017, İzmir/span>
 												</li>
