--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 											</header>
 											<ul class="quote-list">
 												<li>
-													<img style="width:100px;" src="images/teoslogo.png" alt="" />
+													<img src="images/teosicon.png" alt="" />
 													<p>"Teos Bilgi Teknolojileri'ni kurdu"</p>
 													<span>Mayıs 2017, İzmir/span>
 												</li>
