--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 													<span>Mayıs 2017, İzmir/span>
 												</li>
 												<li>
-													<img src="images/pic07.jpg" alt="" />
+													<img style="width:70px;" src="images/lmtpicon.png" alt="" />
 													<p>"Limantepe Bilgi Teknolojileri'ne ortak oldu, ayrıldı"</p>
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
