--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 												<li>
 													<img style="width:70px;" src="images/teosicon.png" alt="" />
 													<p>"Teos Bilgi Teknolojileri'ni kurdu"</p>
-													<span>Mayıs 2017, İzmir/span>
+													<span>Mayıs 2017, İzmir</span>
 												</li>
 												<li>
 													<img style="width:70px;" src="images/lmtpicon.png" alt="" />
