--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
-													<img src="images/pic08.jpg" alt="" />
-													<p>"Magna veroeros amet tempus"</p>
-													<span>Mary Smith, CFO of UntitledBiz</span>
+													<img style="width:70px;" src="images/cdfx.png" alt="" />
+													<p>"CloudyFlex'le ortak CRM projeleri yaptı"</p>
+													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 											</ul>
 										</section>
