--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 												</li>
 												<li>
 													<img style="width:70px;" src="images/cdfx.png" alt="" />
-													<p>"CloudyFlex'le ortak CRM projeleri yaptı"</p>
+													<p>"CloudyFlex'le ortak Zoho CRM ve Creator projeleri yaptı"</p>
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 											</ul>
