--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
-													<img style="width:70px;" src="images/cdfx.png" alt="" />
+													<img style="width:70px;" src="images/cdfxicon.png" alt="" />
 													<p>"CloudyFlex'le ortak Zoho CRM ve Creator projeleri yaptı"</p>
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
