--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<section>
 											<header>
 												<h2>Kimdir?</h2>
-												<h3>Bilgisayar mühendisidir, dost canlısıdır</h3>
+												<h3>Bilgisayar mühendisidir, dost canlısıdır.</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
@@ -170,7 +170,7 @@
 										<section>
 											<header>
 												<h2>Neler yaptı?</h2>
-												<h3>Okudu, çalıştı, evlendi, baba oldu</h3>
+												<h3>Okudu, çalıştı, evlendi, baba oldu.</h3>
 											</header>
 											<ul class="quote-list">
 												<li>
@@ -185,7 +185,7 @@
 												</li>
 												<li>
 													<img style="width:70px;" src="images/cdfxicon.png" alt="" />
-													<p>"CloudyFlex'le ortak Zoho CRM ve Creator projeleri yaptı"</p>
+													<p>"CloudyFlex'le birlikte Zoho CRM ve Creator projeleri yaptı"</p>
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 											</ul>
