--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 										<section>
 											<header>
 												<h2>Kimdir?</h2>
-												<h3>Bilgisayar mühendisidir, dost canlısıdır.</h3>
+												<h3>Bilgisayar mühendisidir.</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
