--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<section>
 											<header>
 												<h2>Ne yapar?</h2>
-												<h3>Doktora yapar, çalışır.</h3>
+												<h3>Çalışır, üretir, doktora tezi yazar.</h3>
 											</header>
 											<ul class="check-list">
 												<li>Marmara Üniversitesi'nde İstatistik Doktora programında tezini yazıyor'</li>
