--- a/index.html
+++ b/index.html
@@ -175,17 +175,17 @@
 											<ul class="quote-list">
 												<li>
 													<img style="width:70px;" src="images/teosicon.png" alt="" />
-													<p>"Teos Bilgi Teknolojileri'ni kurdu"</p>
+													<p>Teos Bilgi Teknolojileri'ni kurdu</p>
 													<span>Mayıs 2017, İzmir</span>
 												</li>
 												<li>
 													<img style="width:70px;" src="images/lmtpicon.png" alt="" />
-													<p>"Limantepe Bilgi Teknolojileri'ne ortak oldu, ayrıldı"</p>
+													<p>Limantepe Bilgi Teknolojileri'ne ortak oldu, ayrıldı</p>
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
 													<img style="width:70px;" src="images/cdfxicon.png" alt="" />
-													<p>"CloudyFlex'le birlikte Zoho CRM ve Zoho Creator projeleri yaptı"</p>
+													<p>CloudyFlex'le birlikte Zoho CRM ve Zoho Creator projeleri yaptı</p>
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 											</ul>
