--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
 												<h3>Çalışır, üretir, doktora tezi yazar.</h3>
 											</header>
 											<ul class="check-list">
-												<li>Marmara Üniversitesi'nde İstatistik Doktora programında tezini yazıyor'</li>
-												<li>Eu varius nibh suspendisse lorem</li>
+												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
+												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
 												<li>Magna eget odio amet mollis justo</li>
 												<li>Facilisis quis sagittis mauris</li>
 												<li>Amet tellus gravida lorem ipsum</li>
