--- a/index.html
+++ b/index.html
@@ -67,13 +67,9 @@
 
 									<!-- Feature #1 -->
 										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-											<h2>Welcome to Halcyonic</h2>
-											<p>
-												This is <strong>Halcyonic</strong>, a free site template
-												by <a href="http://twitter.com/ajlkn">AJ</a> for
-												<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-												built on HTML5 + CSS3, and includes 5 unique page layouts.
+											<a href="#" class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
+											<h2>İstanbul Erkek Lisesi</h2>
+											<p>1979 - 1986 arasında ortaokul ve liseyi Alman usulü okudu.
 											</p>
 										</section>
 
@@ -152,7 +148,7 @@
 										<section>
 											<header>
 												<h2>Ne yapar?</h2>
-												<h3>Çalışır, üretir, doktora tezi yazar.</h3>
+												<h3>Çalışır, üretir, gezer, doktora tezi yazar.</h3>
 											</header>
 											<ul class="check-list">
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
