--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-big">Hoş geldiniz!</a>
+										<a href="#" class="button-big">İlerleyelim</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
