--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
 										<section>
 											<a href="#" class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
-											<p>1979 - 1986 arasında ortaokul ve liseyi Alman usulü okudu.
-											</p>
+											<p>1979 - 1986, ortaokul ve lise (Alman usulü)</p>
 										</section>
 
 								</div>
@@ -78,13 +77,9 @@
 
 									<!-- Feature #2 -->
 										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-											<h2>Responsive You Say?</h2>
-											<p>
-												Yes! Halcyonic is built on the <a href="http://getskel.com">Skel</a>
-												framework, so it has full responsive support for desktop, tablet,
-												and mobile device displays.
-											</p>
+											<a href="#" class="bordered-feature-image"><img src="images/bufoto.jpg" alt="" /></a>
+											<h2>Boğaziçi Üniversitesi</h2>
+											<p>1986 - 1991, Bilgisayar Mühendisliği<br/>1991 - 1994 İşletme Yüksek Lisans (Finans MBA)</p>
 										</section>
 
 								</div>
