--- a/index.html
+++ b/index.html
@@ -23,17 +23,7 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1><a href="#" id="logo">Murat Olgun</a></h1>
-
-								<!-- Nav -->
-									<nav id="nav">
-										<a href="index.html">Anasayfa</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
-									</nav>
-
+									<h1>Murat Olgun</h1>
 							</div>
 						</div>
 					</header>
