--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							<div class="12u">
 
 								<!-- Logo -->
-									<h1>Murat Olgun</h1>
+									<h1><a id="logo">Murat Olgun</a></h1>
 							</div>
 						</div>
 					</header>
