--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-big">İlerleyelim</a>
+										<a href="ileri" class="button-big">İlerleyelim</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+										<a class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
 
 								</div>
 							</div>
@@ -56,7 +56,7 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Feature #1 -->
-										<section>
+										<section id="ileri">
 											<a href="#" class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
 											<p>1979 - 1986, ortaokul ve lise (Alman usulü)</p>
