--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 									<!-- Feature #1 -->
 										<section id="ileri">
-											<a href="#" class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
+											<a class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
 											<p>1979 - 1986, ortaokul ve lise (Alman usulü)</p>
 										</section>
@@ -67,7 +67,7 @@
 
 									<!-- Feature #2 -->
 										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/bufoto.jpg" alt="" /></a>
+											<a class="bordered-feature-image"><img src="images/bufoto.jpg" alt="" /></a>
 											<h2>Boğaziçi Üniversitesi</h2>
 											<p>1986 - 1991, Bilgisayar Mühendisliği<br/>1991 - 1994 İşletme Yüksek Lisans (Finans MBA)</p>
 										</section>
@@ -77,7 +77,7 @@
 
 									<!-- Feature #3 -->
 										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+											<a class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
 											<h2>License Info</h2>
 											<p>
 												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
