--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<section id="ileri">
 											<a class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
-											<p>1979 - 1986, ortaokul ve lise (Alman usulü)</p>
+											<p>1979-1983 Ortaokul<br/>1983-1986 Lise</p>
 										</section>
 
 								</div>
@@ -69,7 +69,7 @@
 										<section>
 											<a class="bordered-feature-image"><img src="images/bufoto.jpg" alt="" /></a>
 											<h2>Boğaziçi Üniversitesi</h2>
-											<p>1986 - 1991, Bilgisayar Mühendisliği<br/>1991 - 1994 İşletme Yüksek Lisans (Finans MBA)</p>
+											<p>1986-1991 Bilgisayar Mühendisliği<br/>1991-1994 İşletme Yüksek Lisans (Finans MBA)</p>
 										</section>
 
 								</div>
