--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 										<section id="ileri">
 											<a class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
-											<p>1979-1983 Ortaokul<br/>1983-1986 Lise</p>
+											<p>1979-1986 Ortaokul ve Lise</p>
 										</section>
 
 								</div>
