--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 									<!-- Feature #4 -->
 										<section>
-											<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 											<h2>Volutpat etiam aliquam</h2>
 											<p>
 												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
