--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 									<section>
 										<h2>An Informative Text Blurb</h2>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
+											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
 										</p>
 									</section>
 
