--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
 
 								<!-- Blurb -->
 									<section>
-										<h2>An Informative Text Blurb</h2>
+										<h2><!-- Copyright -->
+												&copy; Murat Olgun</h2>
 										<p>
-											<!-- Copyright -->
-												&copy; Murat Olgun. Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
+											Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
 										</p>
 									</section>
 
