--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 											<div class="row">
 												<div class="3u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="http://www.teos.com.tr">Teos Bilgi Teknolojileri</a></li>
 													</ul>
 												</div>
 												<div class="3u 12u(mobile)">
@@ -206,7 +206,7 @@
 												</div>
 												<div class="3u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="#">Eu varius vitae magna</a></li>
+														<li><a href="http://alieren.olguns.net">Ali Eren Olgun</a></li>
 													</ul>
 												</div>
 											</div>
