--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 								<!-- Links -->
 									<section>
-										<h2>Links to Important Stuff</h2>
+										<h2>Bunlara da bakalım</h2>
 										<div>
 											<div class="row">
 												<div class="3u 12u(mobile)">
