--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 										<section>
 											<header>
 												<h2>Neler yaptı?</h2>
-												<h3>Okudu, çalıştı, evlendi, baba oldu.</h3>
+												<h3>Okudu, çalıştı, eğlendi, evlendi, baba oldu.</h3>
 											</header>
 											<ul class="quote-list">
 												<li>
