--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 												</li>
 												<li>
 													<img style="width:70px;" src="images/lmtpicon.png" alt="" />
-													<p>Limantepe Bilgi Teknolojileri'nde Yönetici Ortak olarak sağlık alanında çeşitli bilişim projelerinde yer aldı</p>
+													<p>Limantepe Bilgi Teknolojileri'nde Yönetici Ortak olarak sağlık sektöründe çeşitli bilişim projelerinde yer aldı</p>
 													<span>Eylül 2015 - Mart 2017, İzmir</span>
 												</li>
 												<li>
