--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="ileri" class="button-big">İlerleyelim</a>
+										<a href="ileri" class="button-big">Biraz daha detay</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -56,7 +56,7 @@
 								<div class="3u 12u(mobile)">
 
 									<!-- Feature #1 -->
-										<section id="ileri">
+										<section>
 											<a class="bordered-feature-image"><img src="images/ielfoto.jpg" alt="" /></a>
 											<h2>İstanbul Erkek Lisesi</h2>
 											<p>1979-1986</p>
@@ -116,7 +116,7 @@
 										<section>
 											<header>
 												<h2>Kimdir?</h2>
-												<h3>Bilgisayar mühendisidir.</h3>
+												<h3>İznir'de yaşayan İstanbullu bilgisayar mühendisidir.</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
