--- a/index.html
+++ b/index.html
@@ -81,8 +81,6 @@
 											<h2>License Info</h2>
 											<p>
 												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
-												so use it for personal or commercial use as much as you like (just keep
-												the footer credit intact).
 											</p>
 										</section>
 
@@ -94,8 +92,7 @@
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 											<h2>Volutpat etiam aliquam</h2>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
-												eu varius nibh. Suspendisse vitae magna eget odio amet mollis.
+												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
 											</p>
 										</section>
 
