--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="ileri" class="button-big">Biraz daha detay</a>
+										<a href="ileri" class="button-big">Biraz daha bilgi</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
