--- a/index.html
+++ b/index.html
@@ -193,6 +193,11 @@
 												</div>
 												<div class="3u 12u(mobile)">
 													<ul class="link-list last-child">
+														<li><a href="http://sakinyasam.org">Sakin Yaşam</a></li>
+													</ul>
+												</div>
+												<div class="3u 12u(mobile)">
+													<ul class="link-list last-child">
 														<li><a href="http://alieren.olguns.net">Ali Eren Olgun</a></li>
 													</ul>
 												</div>
