--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 											<div class="row">
 												<div class="3u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="http://www.teos.com.tr">Teos Bilgi Teknolojileri</a></li>
+														<li><a href="http://teos.com.tr">Teos Bilgi Teknolojileri</a></li>
 													</ul>
 												</div>
 												<div class="3u 12u(mobile)">
