--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Image -->
-										<a class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+										<a class="bordered-feature-image"><img src="images/ecuadormountainview.jpg" alt="" /></a>
 
 								</div>
 							</div>
