--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="ileri" class="button-big">Biraz daha bilgi</a>
+										<a href="birazdahabilgi" class="button-big">Biraz daha bilgi</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -168,6 +168,8 @@
 												</li>
 											</ul>
 										</section>
+
+										<a href="dahaonce" class="button-big">Daha önce</a>
 
 								</div>
 							</div>
