--- a/index.html
+++ b/index.html
@@ -177,6 +177,34 @@
 					</div>
 				</div>
 
+			<!-- Content 2 -->
+				<div id="content-wrapper">
+					<div id="content2">
+						<div class="container">
+							<div class="row">
+								<div class="12u 12u(mobile)">
+
+									<!-- Box #2 -->
+										<section>
+											<header>
+												<h2>Ne yapar?</h2>
+												<h3>Çalışır, üretir, gezer, doktora tezi yazar.</h3>
+											</header>
+											<ul class="check-list">
+												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
+												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
+												<li>Magna eget odio amet mollis justo</li>
+												<li>Facilisis quis sagittis mauris</li>
+												<li>Amet tellus gravida lorem ipsum</li>
+											</ul>
+										</section>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
 			<!-- Footer -->
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
