--- a/index.html
+++ b/index.html
@@ -169,8 +169,14 @@
 											</ul>
 										</section>
 
-										<p> </p>
-										<a href="dahaonce" class="button-big">Daha önce</a>
+										<div class="container">
+											<div class="row">
+												<div class="12u 12u(mobile)">
+													<p>...</p>
+													<a href="dahaonce" class="button-big">Daha önce</a>
+												</div>
+											</div>
+										</div>
 
 								</div>
 							</div>
