--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+										<p>Tanışalım ...</p>
 										<a href="birazdahabilgi" class="button-big">Biraz daha bilgi</a>
 
 								</div>
