--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 									<!-- Box #2 -->
 										<section>
-											<ul class="check-list">
+											<ul class="bullet-list">
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
 												<li>Magna eget odio amet mollis justo</li>
