--- a/index.html
+++ b/index.html
@@ -185,6 +185,21 @@
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
+									<!-- Box #1 -->
+										<section>
+											<ul class="link-list">
+												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
+												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
+												<li>Magna eget odio amet mollis justo</li>
+												<li>Facilisis quis sagittis mauris</li>
+												<li>Amet tellus gravida lorem ipsum</li>
+											</ul>
+										</section>
+
+								</div>
+							</div>
+								<div class="6u 12u(mobile)">
+
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
