--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 												<li>
-													<a href="dahaonce" class="button-big">Daha önce</a>
+													<div id="banner">
+														<a href="dahaonce" class="button-big">Daha önce</a>
+													</div>
 												</li>
 											</ul>
 										</section>
