--- a/index.html
+++ b/index.html
@@ -168,7 +168,11 @@
 												</li>
 												<li>
 													<div id="banner">
-														<a href="dahaonce" class="button-big">Daha önce</a>
+														<div class="container">
+															<div class="row">
+																<a href="dahaonce" class="button-big">Daha önce</a>
+															</div>
+														</div>
 													</div>
 												</li>
 											</ul>
