--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
 													<div id="banner">
 														<div class="container">
 															<div class="row">
-																<a href="dahaonce" class="button-big">Daha önce</a>
+																<div class="12u">
+																	<a href="dahaonce" class="button-big">Daha önce</a>
+																</div>
 															</div>
 														</div>
 													</div>
