--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 												<li>
-													<div id="banner">
+													<div id="features">
 														<div class="container">
 															<div class="row">
 																<div class="12u">
