--- a/index.html
+++ b/index.html
@@ -166,19 +166,17 @@
 													<p>CloudyFlex'le birlikte Zoho CRM ve Zoho Creator projeleri yaptı</p>
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
-												<li>
-													<div id="features">
-														<div class="container">
-															<div class="row">
-																<div class="12u">
-																	<a href="dahaonce" class="button-big">Daha önce</a>
-																</div>
-															</div>
-														</div>
-													</div>
-												</li>
 											</ul>
 										</section>
+										<div id="banner">
+											<div class="container">
+												<div class="row">
+													<div class="12u">
+														<a href="dahaonce" class="button-big">Daha önce</a>
+													</div>
+												</div>
+											</div>
+										</div>
 
 								</div>
 							</div>
