--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 												<div class="container">
 													<div class="row">
 														<div class="12u">
-															<a href="dahaonce" class="button-big">Daha önce</a>
+															<a href="dahaonce" class="button">Daha önce neler var?</a>
 														</div>
 													</div>
 												</div>
