--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
 				</div>
 
 			<!-- Content 2 -->
-				<div id="content-wrapper">
-					<div id="content2">
+				<div id="features-wrapper">
+					<div id="content">
 						<div class="container">
 							<div class="row">
 								<div class="6u 12u(mobile)">
