--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
 			<!-- Content 2 -->
 				<div id="features-wrapper">
-					<div id="content">
+					<div id="features">
 						<div class="container">
 							<div class="row">
 								<div class="6u 12u(mobile)">
