--- a/index.html
+++ b/index.html
@@ -117,9 +117,7 @@
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-												Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-												justo facilisis quis. Sed sagittis mauris amet tellus gravida lorem ipsum.
+												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.
 											</p>
 										</section>
 
