--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<h2>Daha önce neler var?</h2>
+							<h2>Daha önce neler yaptı?</h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
