--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 												<li>
-													<a href="dahaonce" class="button">Daha önce neler var?</a>
+													<a href="#dahaonce" class="button">Daha önce neler var?</a>
 												</li>
 											</ul>
 										</section>
@@ -180,7 +180,7 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<h2>Daha önce neler yaptı?</h2>
+							<h2><a name="dahaonce">Daha önce neler yaptı?</a></h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
