--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<h2><a name="dahaonce">Daha önce neler yaptı?</a></h2>
+							<h2><span name="dahaonce">Daha önce neler yaptı?</span></h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
