--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>Tanışalım ...</p>
-										<a href="birazdahabilgi" class="button-big">Biraz daha bilgi</a>
+										<a href="#birazdahabilgi" class="button-big">Biraz daha bilgi</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -112,7 +112,7 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<h2>Kimdir?</h2>
+												<h2><a name="#birazdahabilgi">Kimdir?</a></h2>
 												<h3>İzmir'de yaşayan İstanbullu bilgisayar mühendisidir.</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
@@ -180,7 +180,7 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<h2><span name="dahaonce">Daha önce neler yaptı?</span></h2>
+							<h2><a name="dahaonce">Daha önce neler yaptı?</a></h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
