--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<h2><a name="#birazdahabilgi">Kimdir?</a></h2>
+												<h2><a name="birazdahabilgi">Kimdir?</a></h2>
 												<h3>İzmir'de yaşayan İstanbullu bilgisayar mühendisidir.</h3>
 											</header>
 											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
