--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<!-- Box #2 -->
 										<section>
 											<header>
-												<h2>Ne yapar?</h2>
+												<h2><a>Ne yapar?</a></h2>
 												<h3>Çalışır, üretir, gezer, doktora tezi yazar.</h3>
 											</header>
 											<ul class="check-list">
