--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<!-- Box #2 -->
 										<section>
 											<header>
-												<h2><a>Ne yapar?</a></h2>
+												<h2>Ne yapar?</h2>
 												<h3>Çalışır, üretir, gezer, doktora tezi yazar.</h3>
 											</header>
 											<ul class="check-list">
@@ -181,7 +181,8 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<h2><a name="dahaonce">Daha önce neler yaptı?</a></h2>
+							<a name="dahaonce"></a>
+							<h2>Daha önce neler yaptı?</h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
 
