--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 									<!-- Box #3 -->
 										<section>
 											<header>
-												<h2><a>Neler yaptı?</a></h2>
+												<h2>Neler yaptı?</h2>
 												<h3>Okudu, çalıştı, eğlendi, evlendi, baba oldu.</h3>
 											</header>
 											<ul class="quote-list">
