--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 											<ul class="quote-list">
 												<li>
 													<img style="width:70px;" src="images/teosicon.png" alt="" />
-													<p>Teos Bilgi Teknolojileri'ni kurdu</p>
+													<p><a href="http://teos.com.tr">Teos Bilgi Teknolojileri</a>'ni kurdu</p>
 													<span>Mayıs 2017, İzmir</span>
 												</li>
 												<li>
