--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 											</header>
 											<ul class="quote-list">
 												<li>
-													<img <a href="http://teos.com.tr"> style="width:70px;" src="images/teosicon.png" alt="" </a>/>
+													<img style="width:70px;" src="images/teosicon.png" alt="" />
 													<p><a href="http://teos.com.tr">Teos Bilgi Teknolojileri</a>'ni kurdu</p>
 													<span>Mayıs 2017, İzmir</span>
 												</li>
