--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 												<h2>Kimdir?</h2>
 												<h3>İzmir'de yaşayan İstanbullu bilgisayar mühendisidir.</h3>
 											</header>
-											<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#header-wrapper" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.
 											</p>
