--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
 			<!-- Content -->
 				<div id="content-wrapper">
-					<div id="content">
+					<div id="birazdahabilgi">
 						<div class="container">
 							<div class="row">
 								<div class="4u 12u(mobile)">
@@ -112,11 +112,11 @@
 									<!-- Box #1 -->
 										<section>
 											<header>
-												<a name="birazdahabilgi"></a>
+												
 												<h2>Kimdir?</h2>
 												<h3>İzmir'de yaşayan İstanbullu bilgisayar mühendisidir.</h3>
 											</header>
-											<a href="#header-wrapper" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+											<a href="#header" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.
 											</p>
@@ -179,9 +179,9 @@
 
 			<!-- Content 2 -->
 				<div id="features-wrapper">
-					<div id="features">
+					<div id="dahaonce">
 						<div class="container">
-							<a name="dahaonce"></a>
+							
 							<h2>Daha önce neler yaptı?</h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
@@ -253,7 +253,7 @@
 								<!-- Blurb -->
 									<section>
 										<h2><!-- Copyright -->
-												&copy; Murat Olgun</h2>
+												&copy; <a href="#header">Murat Olgun</a></h2>
 										<p>
 											Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
 										</p>
