--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>Tanışalım ...</p>
-										<a href="#birazdahabilgi" class="button-big">Biraz daha bilgi</a>
+										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
 								<div class="6u 12u(mobile)">
@@ -104,7 +104,7 @@
 
 			<!-- Content -->
 				<div id="content-wrapper">
-					<div id="birazdahabilgi">
+					<div id="content">
 						<div class="container">
 							<div class="row">
 								<div class="4u 12u(mobile)">
@@ -179,9 +179,9 @@
 
 			<!-- Content 2 -->
 				<div id="features-wrapper">
-					<div id="dahaonce">
+					<div id="features">
 						<div class="container">
-							
+							<a name="dahaonce"></a>
 							<h2>Daha önce neler yaptı?</h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
