--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
 												</li>
 												<li>
-													<a href="#dahaonce" class="button">Daha önce neler var?</a>
+													<a href="#past" class="button">Daha önce neler var?</a>
 												</li>
 											</ul>
 										</section>
@@ -181,7 +181,7 @@
 				<div id="features-wrapper">
 					<div id="features">
 						<div class="container">
-							<a name="dahaonce"></a>
+							<a name="past"></a>
 							<h2>Daha önce neler yaptı?</h2>
 							<div class="row">
 								<div class="6u 12u(mobile)">
