--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
-							<div class="10u 12u(mobile)">
+							<div class="9u 12u(mobile)">
 
 								<!-- Links -->
 									<section>
@@ -241,6 +241,16 @@
 												<div class="2u 12u(mobile)">
 													<ul class="link-list last-child">
 														<li><a href="http://alieren.olguns.net">Ali Eren Olgun</a></li>
+													</ul>
+												</div>
+												<div class="2u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="http://b-fit.com.tr">b-fit Sağlık ve Spor</a></li>
+													</ul>
+												</div>
+												<div class="1u 12u(mobile)">
+													<ul class="link-list last-child">
+														<li><a href="http://muzipo.com">Muipo Kids/a></li>
 													</ul>
 												</div>
 											</div>
