--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 												</div>
 												<div class="2u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="http://muzipo.com">Muipo Kids/a></li>
+														<li><a href="http://muzipo.com">Muzipo Kids</a></li>
 													</ul>
 												</div>
 											</div>
