--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>Tanışalım ...</p>
+										<p>Tanış olalım ...</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
