--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>Tanış olalım ...<br/>İzmir Seferihisar Sığacık'ta yaşar, Ayvalık sever.
+										<p>Tanış olalım ...<br/>İzmir Seferihisar Sığacık'ta yaşar,<br/>Ayvalık sever, Ege sever.
 										</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
