--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				<div id="footer-wrapper">
 					<footer id="footer" class="container">
 						<div class="row">
-							<div class="9u 12u(mobile)">
+							<div class="8u 12u(mobile)">
 
 								<!-- Links -->
 									<section>
@@ -259,14 +259,14 @@
 									</section>
 
 							</div>
-							<div class="3u 12u(mobile)">
+							<div class="4u 12u(mobile)">
 
 								<!-- Blurb -->
 									<section>
-										<h2><!-- Copyright -->
-												&copy; <a href="#header">Murat Olgun</a></h2>
+										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a></h2>
 										<p>
-											Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
+											<!-- Copyright -->	
+											&copy; <a href="#header">Murat Olgun</a>Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
 										</p>
 									</section>
 
