--- a/index.html
+++ b/index.html
@@ -263,10 +263,10 @@
 
 								<!-- Blurb -->
 									<section>
-										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a></h2>
+										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a> veya 0532 260 6781</h2>
 										<p>
 											<!-- Copyright -->	
-											&copy; <a href="#header">Murat Olgun</a>Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
+											&copy; <a href="#header">Murat Olgun</a>. Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
 										</p>
 									</section>
 
