--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 												</div>
 												<div class="2u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="http://b-fit.com.tr">b-fit Sağlık ve Spor</a></li>
+														<li><a href="http://b-fit.com.tr">b-fit Sağlık ve Spor</a>&nbsp;<a href="http://muzipo.com">Muzipo Kids</a></li>
 													</ul>
 												</div>
 												<div class="2u 12u(mobile)">
