--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 												</div>
 												<div class="4u 12u(mobile)">
 													<ul class="link-list last-child">
-														<li><a href="http://b-fit.com.tr">b-fit Sağlık ve Spor</a>&nbsp;|&nbsp;<a href="http://muzipo.com">Muzipo Kids</a></li>
+														<li><a href="http://b-fit.com.tr">b-fit Sağlık ve Spor</a> | <a href="http://muzipo.com">Muzipo Kids</a></li>
 													</ul>
 												</div>
 											</div>
@@ -258,7 +258,7 @@
 
 								<!-- Blurb -->
 									<section>
-										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a> veya 0532 260 6781</h2>
+										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a> | <a href="tel:0532 260 6781">telefon</h2>
 										<p>
 											<!-- Copyright -->	
 											&copy; <a href="#header">Murat Olgun</a>. Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
