--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 								<!-- Blurb -->
 									<section>
-										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">eposta</a> | <a href="tel:0532 260 6781">telefon</h2>
+										<h2>İletişim: <a href="mailto:eposta@muratolgun.net">class="fa-envelope-o"</a> | <a href="tel:0532 260 6781">class="fa-phone"</a></h2>
 										<p>
 											<!-- Copyright -->	
 											&copy; <a href="#header">Murat Olgun</a>. Tüm hakları sakldır. | Tasarım: <a href="http://html5up.net">HTML5 UP</a>
