--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>Tanış olalım ...<br/>İzmir Seferihisar Sığacık'ta yaşar,<br/>Ege'nin iki yakasını da sever.
-										</p>
+										<p>Sığacık'ta yaşar, Ege'nin iki yakasını da sever.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
