--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>Sığacık'ta yaşar, Ege'nin iki yakasını da sever.</p>
+										<p>Sığacık'ta yaşar, Ege'yi sever.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
@@ -78,9 +78,9 @@
 									<!-- Feature #3 -->
 										<section>
 											<a class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-											<h2>License Info</h2>
+											<h2>İstanbul-İzmir-Ankara</h2>
 											<p>
-												Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
+												1991-1994 KoçGrubu, 1994-1999 Promis, 1999-2000 Vestel, 2000-2004 Meteksan
 											</p>
 										</section>
 
@@ -90,9 +90,9 @@
 									<!-- Feature #4 -->
 										<section>
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>Volutpat etiam aliquam</h2>
+											<h2>Dünya-İzmir</h2>
 											<p>
-												Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
+												2005-2009 Meteksan, 2009-2014 DünyaOkçulukFederasyonu, 2014-2015 CloudyFlex, 2015-2017 Limanepe
 											</p>
 										</section>
 
