--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 											<a class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
 											<h2>İstanbul-İzmir-Ankara</h2>
 											<p>
-												1991-1994 Koç Grubu, 1994-1999 Promis, 1999-2000 Vestel, 2000-2004 Meteksan
+												1991-1994 Koç, 1994-1999 Promis, 1999-2000 Vestel, 2000-2004 Meteksan
 											</p>
 										</section>
 
@@ -92,7 +92,7 @@
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 											<h2>Dünya-İzmir</h2>
 											<p>
-												2004-2009 Meteksan, 2009-2014 Okçuluk, 2014-2015 CloudyFlex, 2015-2017 Limantepe
+												2004-2009 Meteksan, 2009-2014 Tfors, 2014-2015 CloudyFlex, 2015-2017 Limantepe
 											</p>
 										</section>
 
