--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<!-- Feature #4 -->
 										<section>
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>İzmir</h2>
+											<h2>İzmir-Dünya-İzmir</h2>
 											<p>
 												2004-2009 Meteksan, 2009-2014 Tfors, 2014-2015 CloudyFlex, 2015-2017 Limantepe
 											</p>
