--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<!-- Feature #4 -->
 										<section>
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-											<h2>İzmir-Dünya-İzmir</h2>
+											<h2>İzmir-Dünya-İstanbul-İzmir</h2>
 											<p>
 												2004-2009 Meteksan, 2009-2014 Tfors, 2014-2015 CloudyFlex, 2015-2017 Limantepe
 											</p>
@@ -163,7 +163,7 @@
 												<li>
 													<img style="width:70px;" src="images/cdfxicon.png" alt="" />
 													<p>CloudyFlex'le birlikte Zoho CRM ve Zoho Creator projeleri yaptı</p>
-													<span>Ekim 2014 - Eylül 2015, İzmir/İstanbul</span>
+													<span>Ekim 2014 - Eylül 2015, İstanbul/İzmir</span>
 												</li>
 												<li>
 													<a href="#past" class="button">Daha önce neler var?</a>
