--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 											<ul class="check-list">
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
-												<li>Magna eget odio amet mollis justo</li>
+												<li></li>
 												<li>Facilisis quis sagittis mauris</li>
 												<li>Amet tellus gravida lorem ipsum</li>
 											</ul>
@@ -189,11 +189,7 @@
 									<!-- Box #1 -->
 										<section>
 											<ul class="link-list">
-												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
-												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
-												<li>Magna eget odio amet mollis justo</li>
-												<li>Facilisis quis sagittis mauris</li>
-												<li>Amet tellus gravida lorem ipsum</li>
+												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik ve sonuç hizmetleri sağladı</li>
 											</ul>
 										</section>
 
@@ -203,11 +199,8 @@
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
-												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
-												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
-												<li>Magna eget odio amet mollis justo</li>
-												<li>Facilisis quis sagittis mauris</li>
-												<li>Amet tellus gravida lorem ipsum</li>
+												<li>Ortağı da olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı</li>
+												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı ve Koç 2000 Proje Yöneticisi olarak çalıştı </li>
 											</ul>
 										</section>
 
