--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
-												<li>Ortağı da olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı</li>
-												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı ve Koç 2000 Proje Yöneticisi olarak çalıştı </li>
+												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı, büyük ölçekli bilişim projeleri yaptı</li>
+												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı ve Koç 2000 Proje Yöneticisi olarak çalıştı</li>
 											</ul>
 										</section>
 
