--- a/index.html
+++ b/index.html
@@ -189,7 +189,8 @@
 									<!-- Box #1 -->
 										<section>
 											<ul class="link-list">
-												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik ve sonuç hizmetleri sağladı</li>
+												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik hizmetleri ve sonuç sistemleri sağladı</li>
+												<li>TFORS Events ile İzmir'in EXPO adaylığı süreçlerinde proje yöneticisi ve danışman olark görev aldı/li>
 											</ul>
 										</section>
 
