--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
 									<!-- Box #1 -->
 										<section>
 											<ul class="link-list">
-												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik hizmetleri ve sonuç sistemleri sağladı</li>
-												<li>TFORS Events ile İzmir'in EXPO adaylığı süreçlerinde proje yöneticisi ve danışman olark görev aldı/li>
+												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik hizmetleri ve sonuç sistemleri sağladı,<br/>
+												İzmir'in EXPO adaylığı süreçlerinde proje yöneticisi ve danışman olarak görev aldı</li>
 											</ul>
 										</section>
 
@@ -200,8 +200,8 @@
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
-												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı, büyük ölçekli bilişim projeleri yaptı</li>
-												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı ve Koç 2000 Proje Yöneticisi olarak çalıştı</li>
+												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı,<br/>büyük ölçekli bilişim projeleri yaptı</li>
+												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı<br/>ve Koç 2000 Proje Yöneticisi olarak çalıştı</li>
 											</ul>
 										</section>
 
