--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
+												<li>Vestel Elektronik Yeni Teknolojiler Koordinatör Yardımcısı oldu,<br/>endüstri analizi ve stratejik planlama çalışmalarına katıldı</li>
 												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı,<br/>büyük ölçekli bilişim projeleri yaptı</li>
 												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı<br/>ve Koç 2000 Proje Yöneticisi olarak çalıştı</li>
 											</ul>
