--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 											<a class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 											<h2>İzmir-Dünya-İstanbul-İzmir</h2>
 											<p>
-												2004-2009 Meteksan, 2009-2014 Tfors, 2014-2015 CloudyFlex, 2015-2017 Limantepe
+												2004-2009 Meteksan, 2009-2014 Tfors, 2014-2015 Cloudyflex, 2015-2017 Limantepe
 											</p>
 										</section>
 
