--- a/index.html
+++ b/index.html
@@ -187,7 +187,12 @@
 										<section>
 											<ul class="link-list">
 												<li>TFORS Events ile Dünya Okçuluk Federasyonu'na etkinlik hizmetleri ve sonuç sistemleri sağladı,<br/>
-												İzmir'in EXPO adaylığı süreçlerinde proje yöneticisi ve danışman olarak görev aldı</li>
+												İzmir'in EXPO adaylığı süreçlerinde proje yöneticisi ve danışman olarak görev aldı.</li>
+												<li>Meteksan Sistem'de Etkinlik Çözümleri Direktörü olarak Universiade 2005 projesini gerçekleştirdi,<br/>
+													Yerel Yönetim Çözümleri Direktörü olarak İZSU Bilişim Dış Kaynak projesini yürüttü,</br>
+													Kurumsal Çözümler ve Yazılım Direktörü olarak pek çok kurumsal kaynak planlama (ERP)<br/>
+													ve özel yazılım projeleri gerçekleştirdi.
+												</li>
 											</ul>
 										</section>
 
@@ -197,9 +202,9 @@
 									<!-- Box #2 -->
 										<section>
 											<ul class="link-list">
-												<li>Vestel Elektronik Yeni Teknolojiler Koordinatör Yardımcısı oldu,<br/>endüstri analizi ve stratejik planlama çalışmalarına katıldı</li>
-												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı,<br/>büyük ölçekli bilişim projeleri yaptı</li>
-												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı<br/>ve Koç 2000 Proje Yöneticisi olarak çalıştı</li>
+												<li>Vestel Elektronik Yeni Teknolojiler Koordinatör Yardımcısı oldu,<br/>endüstri analizi ve stratejik planlama çalışmalarına katıldı.</li>
+												<li>Ortağı olduğu ProMIS Bilgi Sistemleri'nde Genel Müdür olarak görev aldı,<br/>büyük ölçekli bilişim projeleri yaptı.</li>
+												<li>Koç Holding Yönetim Bilgi Sistemleri'nde Sistem Analist / Programcı<br/>ve Koç 2000 Proje Yöneticisi olarak çalıştı.</li>
 											</ul>
 										</section>
 
