--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
 									<!-- Banner Copy -->
 										<p>Sığacık'ta yaşar, Ege'yi sever.</p>
+										<p>Doğaya, müziğe, spora yakındır.</p>
+										<p>Avrupa, Amerika ve Asya'da pek çok kenti gördü.</p>
+										<p>.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
