--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 									<!-- Banner Copy -->
 										<p>Sığacık'ta yaşar, Ege'yi sever.</p>
 										<p>Doğaya, müziğe, spora yakındır.</p>
-										<p>Avrupa, Amerika ve Asya'da pek çok kenti gördü.</p>
+										<p>Avrupa, Amerika ve Asya'da bulundu.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
