--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 								<div class="6u 12u(mobile)">
 
 									<!-- Banner Copy -->
-										<p>Sığacık'ta yaşar, Ege'yi sever.</p>
-										<p>Doğaya, müziğe, spora yakındır.</p>
-										<p>Avrupa, Amerika ve Asya'da bulundu.</p>
+										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
+										Doğaya, müziğe, spora yakındır.<br/>
+										Avrupa, Amerika ve Asya'da bulundu.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
 								</div>
