--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
-										Doğaya, müziğe, spora yakındır.<br/>
+										Doğa, müzik, sporla ilgilidir.<br/>
 										Avrupa, Amerika ve Asya'da bulundu.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
@@ -120,7 +120,8 @@
 											</header>
 											<a href="#header" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
-												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.
+												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.<br/>
+												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.
 											</p>
 										</section>
 
