--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 									<!-- Banner Copy -->
 										<p>Sığacık'ta yaşar, Ege'yi sever.<br/>
-										Doğa, müzik, sporla ilgilidir.<br/>
+										Doğa, müzik ve sporla ilgilidir.<br/>
 										Avrupa, Amerika ve Asya'da bulundu.</p>
 										<a href="#content" class="button-big">Biraz daha bilgi</a>
 
@@ -121,6 +121,7 @@
 											<a href="#header" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 											<p>
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.<br/>
+												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
 												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.
 											</p>
 										</section>
