--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 											<ul class="check-list">
 												<li>Marmara Üniversitesi İstatistik Doktora programında tezini yazıyor</li>
 												<li>Bilişim sektöründe danışmanlık ve proje yöneticiliği yapıyor</li>
-												<li>Evinin bahçesinde zeytin, üzüm, domates, biber ve bal üretiyor</li>
+												<li>Evinin bahçesinde zeytin, üzüm, domates, biber, lavanta ve arı kovanı var</li>
 											</ul>
 										</section>
 
