--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
 											<p>
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.<br/>
 												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
-												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.
+												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.<br/>
+												25 yıldan fazla bilişim sektörü deneyimi var.
 											</p>
 										</section>
 
