--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 												Selanik / Batı Trakya kökenli göçmen bir aileden gelir.<br/>
 												Ailesinin özverisi ve desteğiyle iyi bir eğitim aldı.<br/>
 												1994'te Aslı ile evlendi, 1998'de Ali Eren doğdu.<br/>
-												25 yıldan fazla bilişim sektörü deneyimi var.
+												Bilişim sektöründe pek çok kurum ve projede çalıştı.
 											</p>
 										</section>
 
